--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,21 +1,29 @@
+
+
+.container{
+  padding: 0 2rem;
+}
+
 .main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
   min-height: 100vh;
+  justify-content: flex-start;
+  padding-top: 3rem;
 }
 
 .description {
   display: inherit;
-  justify-content: inherit;
+  justify-content: center;
   align-items: inherit;
   font-size: 0.85rem;
   max-width: var(--max-width);
   width: 100%;
   z-index: 2;
   font-family: var(--font-mono);
+  padding: 1rem;
 }
 
 .description a {
@@ -27,7 +35,6 @@
 
 .description p {
   position: relative;
-  margin: 0;
   padding: 1rem;
   background-color: rgba(var(--callout-rgb), 0.5);
   border: 1px solid rgba(var(--callout-border-rgb), 0.3);
@@ -275,4 +282,25 @@
   to {
     transform: rotate(0deg);
   }
+}
+
+
+.mainnav ul{
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+
+}
+
+.mainnav ul li{
+  margin: 0 24px;
+  list-style: none;
+  font-weight:bold;
+}
+
+.myimg{
+  border-radius: 10px;
+}
+.imagewrap {
+  padding: 30px 0px;
 }
